NetBSD Problem Report #46634
From khorben@defora.org Wed Jun 27 18:57:03 2012
Return-Path: <khorben@defora.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
by www.NetBSD.org (Postfix) with ESMTP id E4C6863B85F
for <gnats-bugs@gnats.NetBSD.org>; Wed, 27 Jun 2012 18:57:02 +0000 (UTC)
Message-Id: <20120627174041.7508E1A47F@syn.defora.rom>
Date: Wed, 27 Jun 2012 19:40:41 +0200 (CEST)
From: Pierre Pronchery <pierre.pronchery@duekin.com>
Reply-To:
To: gnats-bugs@gnats.NetBSD.org
Subject: X does not work anymore with Xen (DOM0, amd64)
X-Send-Pr-Version: 3.95
>Number: 46634
>Category: port-xen
>Synopsis: X does not work anymore with Xen (DOM0, amd64)
>Confidential: no
>Severity: serious
>Priority: high
>Responsible: port-xen-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Wed Jun 27 19:00:00 +0000 2012
>Closed-Date: Wed Sep 05 02:35:30 +0000 2012
>Last-Modified: Wed Sep 05 02:35:30 +0000 2012
>Originator: Pierre Pronchery <pierre.pronchery@duekin.com>
>Release: NetBSD 6.0_BETA2
>Organization:
DUEKIN Consulting
>Environment:
System: NetBSD syn.defora.rom 6.0_BETA2 NetBSD 6.0_BETA2 (XEN3_DOM0) #6: Wed Jun 27 15:59:01 CEST 2012 khorben@kwarx.defora.lan:/home/amd64/obj/sys/arch/amd64/compile/XEN3_DOM0 amd64
Architecture: x86_64
Machine: amd64
>Description:
As observed by a few other users already (on port-xen@), Xorg no longer
works when running a NetBSD DOM0 kernel for Xen. The log shows this:
=== BEGIN PASTE ===
(II) RADEONHD(0): Getting BIOS copy from legacy VBIOS location
(EE) RADEONHD(0): Cannot allocate 0 bytes of memory for BIOS image
(EE) RADEONHD(0): Cannot allocate 0 bytes of memory for BIOS image
(II) RADEONHD(0): Query for AtomBIOS Init: failed
[...]
(EE) Screen(s) found, but none have a usable configuration.
Fatal server error:
no screens found
=== END PASTE ===
The same happens with both the vesa and radeonhd drivers on this machine
(Lenovo ThinkPad T60 2007).
After reading the source code for xf86-video-vesa, xf86-video-radeonhd
and xorg-server, it seems that the Video BIOS is no longer available at
the expected address.
Dumping 64KB of memory at 0xc0000 results in all zeros, whereas I would
be expecting a copy of the Video BIOS to be found there (as confirmed
with a GENERIC kernel).
>How-To-Repeat:
Install, configure and attempt to run Xorg on NetBSD/amd64 with a
XEN3_DOM0 kernel.
>Fix:
Unknown.
>Release-Note:
>Audit-Trail:
From: "Cherry G. Mathew" <cherry@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/46634 CVS commit: src/sys/arch/amd64/amd64
Date: Mon, 3 Sep 2012 05:01:45 +0000
Module Name: src
Committed By: cherry
Date: Mon Sep 3 05:01:45 UTC 2012
Modified Files:
src/sys/arch/amd64/amd64: machdep.c
Log Message:
Revert to unmanaged x86 memory mapped isa and pci space.
This is a revert of commit r1.169:
http://mail-index.netbsd.org/source-changes/2011/11/06/msg028702.html
This should allow X to run on NetBSD/xen amd64 dom0, and fixes PR #46634
To generate a diff of this commit:
cvs rdiff -u -r1.189 -r1.190 src/sys/arch/amd64/amd64/machdep.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/46634 CVS commit: [netbsd-6] src/sys/arch/amd64/amd64
Date: Mon, 3 Sep 2012 19:22:48 +0000
Module Name: src
Committed By: riz
Date: Mon Sep 3 19:22:47 UTC 2012
Modified Files:
src/sys/arch/amd64/amd64 [netbsd-6]: machdep.c
Log Message:
Pull up following revision(s) (requested by cherry in ticket #539):
sys/arch/amd64/amd64/machdep.c: revision 1.190
Revert to unmanaged x86 memory mapped isa and pci space.
This is a revert of commit r1.169:
http://mail-index.netbsd.org/source-changes/2011/11/06/msg028702.html
This should allow X to run on NetBSD/xen amd64 dom0, and fixes PR #46634
To generate a diff of this commit:
cvs rdiff -u -r1.175.2.6 -r1.175.2.7 src/sys/arch/amd64/amd64/machdep.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: bouyer@NetBSD.org
State-Changed-When: Mon, 03 Sep 2012 20:17:33 +0000
State-Changed-Why:
Should be fixed in netbsd-6 now, can you confirm ?
State-Changed-From-To: feedback->closed
State-Changed-By: riz@NetBSD.org
State-Changed-When: Wed, 05 Sep 2012 02:35:30 +0000
State-Changed-Why:
submitter confirms it's fixed.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.36 2007/11/24 03:27:39 kano Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.