Pull up following revision(s) (requested by cherry in ticket #539): 	sys/arch/amd64/amd64/machdep.c: revision 1.190 Revert to unmanaged x86 memory mapped isa and pci space. This is a revert of commit r1.169: http://mail-index.netbsd.org/source-changes/2011/11/06/msg028702.html This should allow X to run on NetBSD/xen amd64 dom0, and fixes PR #46634